--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: categories
-author_profile: true
+layout: single
+title: "Welcome"
 ---
+
+Welcome to my website featuring optimization guides for Linux, Windows, and macOS! Whether you're a seasoned user or just getting started,
+these guides offer insights and techniques to streamline your operating system. From tweaking system settings to maximizing resource 
+utilization, we cover everything you need to know to enhance speed, efficiency, and overall usability.
