--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ title: "Welcome"
 
 Welcome to my website featuring optimization guides for Linux, Windows, and macOS! Whether you're a seasoned user or just getting started,
 these guides offer insights and techniques to streamline your operating system. From tweaking system settings to maximizing resource 
-utilization, we cover everything you need to know to enhance speed, efficiency, and overall usability.
+utilization, guides will contain everything you need to know to enhance speed, efficiency, and overall usability.
