--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: single
 title: "Welcome"
 ---
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 
 Welcome to my website featuring optimization guides for Linux, Windows, and macOS! Whether you're a seasoned user or just getting started,
 these guides offer insights and techniques to streamline your operating system. From tweaking system settings to maximizing resource 
