--- a/index.html
+++ b/index.html
@@ -7,4 +7,14 @@ Welcome to my website featuring optimization guides for Linux, Windows, and macO
 these guides offer insights and techniques to streamline your operating system. From tweaking system settings to maximizing resource 
 utilization, guides will contain everything you need to know to enhance speed, efficiency, and overall usability. -->
 
-<iframe src="http://www.youtube.com" width="400" height="400"></iframe>
+<!DOCTYPE html> 
+<html> 
+<head> 
+  <title>Embedded Web Page</title> 
+</head> 
+<body> 
+ 
+<iframe src="https://www.youtube.com"></iframe> 
+ 
+</body> 
+</html> 
